--- a/build.gradle
+++ b/build.gradle
@@ -14,12 +14,14 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-mustache'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
     implementation "org.springframework.boot:spring-boot-devtools"
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.7.RELEASE'
-    implementation group: 'com.h2database', name: 'h2', scope: 'runtime', version: '1.4.200'
+    implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
     testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-mustache'
 }
 
 test {
