--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,7 @@ spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
 spring.datasource.hikari.username=sa
 spring.h2.console.enabled=true
 server.port=8082
+spring.profiles.include=oauth
+spring.session.store-type=jdbc
 
 
