--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.session:spring-session-jdbc'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
+    annotationProcessor(group: 'org.projectlombok', name: 'lombok', version: '1.18.22')
     implementation "org.springframework.boot:spring-boot-devtools"
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.7.RELEASE'
     implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
