--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-devtools"
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.7.RELEASE'
     implementation group: 'com.h2database', name: 'h2', version: '1.4.200'
-    // https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
-    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '1.1.3'
+    implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client'
     testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-mustache'
