--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
-spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
-spring.datasource.hikari.username=sa
+#spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
+#spring.datasource.hikari.username=sa
 spring.h2.console.enabled=true
 server.port=8082
 spring.profiles.include=oauth
 spring.session.store-type=jdbc
-
-
