e-mail 새로운걸로 하나 추가

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,5 @@ script: "./gradlew clean assemble"
 notifications:
   email:
     recipients:
-      - sshaple@naver.com
-      - pthahaha10@naver.com
+      - acetaeha@gmail.com
     on_success: never
