문제는 공짜였던 녀석이...돈을 내라고해서 무료plan을 찾아서 해결!

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ script: "./gradlew clean assemble"
 notifications:
   email:
     recipients:
-      - acetaeha@gmail.com
+      - sshaple@naver.com
     on_success: never
