e-mail 안가는 현상 gmail로 변경 해봄.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ script: "./gradlew clean assemble"
 notifications:
   email:
     recipients:
-      - sshaple@naver.com
+      - acetaeha@gmail.com
