--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,26 @@ cache:
 
 script: "./gradlew clean assemble"
 
+# deploy 명령어가 실행되기 전에 수행
+# codeDeploy는 jar파일을 인식하지 못하므로 jar+기타 설정 파일들을 모아 압축(zip) 합니다.
+before_deploy:
+  - zip -r momistock *
+  - mkdir -p deploy  # deploy라는 디렉토리를 Travis CI가 실행 중인 위치에 생성 합니다.
+  - mv momistock.zip deploy/momistock.zip
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
+    secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
+    bucket: acet-springboot-build # S3 버킷
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: private # zip 파일 접근을 private으로
+    local_dir: deploy # before_deploy에서 생성한 디렉토리
+    wait-until-deployed: true
+
 # CI 실행 완료시 메일로 알람
 notifications:
   email:
     recipients:
       - acetaeha@gmail.com
+
